// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar Renders "Not logged in" correctly 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <NavLink className={[Function: className]} to=\\"/welcome\\">
        <Blueprint4.Icon icon=\\"symbol-diamond\\" />
        <Blueprint4.NavbarHeading style={{...}}>
          Source Academy @ NUS
        </Blueprint4.NavbarHeading>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/githubassessments\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <NavLink className={[Function: className]} to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route path=\\"/playground\\" element={{...}} />
    <Route path=\\"/githubassessments\\" element={{...}} />
    <Route path=\\"/contributors\\" element={{...}} />
    <Route path=\\"/courses/:courseId/sourcecast\\" element={{...}} />
    <Route path=\\"/courses/:courseId/achievements\\" element={{...}} />
    <Route path=\\"/sicpjs/:section?\\" element={{...}} />
    <Route path=\\"*\\" element={{...}} />
  </Routes>
</Fragment>"
`;

exports[`NavigationBar Renders correctly for student with course 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <NavLink className={[Function: className]} to=\\"/courses/1\\">
        <Blueprint4.Icon icon=\\"symbol-diamond\\" />
        <Blueprint4.NavbarHeading style={{...}}>
          CS1101S
        </Blueprint4.NavbarHeading>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/courses/1/sourcecast\\">
        <Blueprint4.Icon icon=\\"music\\" />
        <div className=\\"navbar-button-text\\">
          Sourcecast
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/playground\\">
        <Blueprint4.Icon icon=\\"code\\" />
        <div className=\\"navbar-button-text\\">
          Playground
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/githubassessments\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/sicpjs/\\">
        <Blueprint4.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/courses/1/achievements\\">
        <Blueprint4.Icon icon=\\"mountain\\" />
        <div className=\\"navbar-button-text\\">
          Achievements
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <NavLink className={[Function: className]} to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route path=\\"/playground\\" element={{...}} />
    <Route path=\\"/githubassessments\\" element={{...}} />
    <Route path=\\"/contributors\\" element={{...}} />
    <Route path=\\"/courses/:courseId/sourcecast\\" element={{...}} />
    <Route path=\\"/courses/:courseId/achievements\\" element={{...}} />
    <Route path=\\"/sicpjs/:section?\\" element={{...}} />
    <Route path=\\"*\\" element={{...}} />
  </Routes>
</Fragment>"
`;

exports[`NavigationBar Renders correctly for student without course 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <NavLink className={[Function: className]} to=\\"/welcome\\">
        <Blueprint4.Icon icon=\\"symbol-diamond\\" />
        <Blueprint4.NavbarHeading style={{...}}>
          Source Academy @ NUS
        </Blueprint4.NavbarHeading>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/githubassessments\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink className={[Function: className]} to=\\"/sicpjs/\\">
        <Blueprint4.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <NavLink className={[Function: className]} to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route path=\\"/playground\\" element={{...}} />
    <Route path=\\"/githubassessments\\" element={{...}} />
    <Route path=\\"/contributors\\" element={{...}} />
    <Route path=\\"/courses/:courseId/sourcecast\\" element={{...}} />
    <Route path=\\"/courses/:courseId/achievements\\" element={{...}} />
    <Route path=\\"/sicpjs/:section?\\" element={{...}} />
    <Route path=\\"*\\" element={{...}} />
  </Routes>
</Fragment>"
`;
